--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: "Md Tanvir Islam Emon"
-author: "Md Tanvir Islam Emon"
-email: "your.email@example.com"
+title: "Md. Tanvir Islam Emon"
+author: "Md. Tanvir Islam Emon"
+email: "tanvirtjs2002@gmail.com"
 description: "Material Science & Engineering student | Cybersecurity & Penetration Testing Enthusiast"
-url: "https://your-username.github.io"     # no trailing slash
+url: "https://tanvir152002.github.io"     # no trailing slash
 baseurl: "/tanvir-portfolio"               # leading slash for project repo
 remote_theme: "mmistakes/minimal-mistakes" # use remote theme
 plugins:
